--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,6 +18,10 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
+
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
+
       - name: Install Chrome
         run: |
           sudo apt-get update
@@ -25,7 +29,7 @@ jobs:
       - name: Set Chrome options for CI
         run: |
           echo "CHROME_OPTS=--headless --no-sandbox --disable-dev-shm-usage" >> $GITHUB_ENV
-          ls -l /opt/google/chrome/chrome
+          CI_RUN: true
 
       - name: Run Tests
         run: mvn test
