changes in yaml

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,10 +26,18 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y google-chrome-stable
-      - name: Set Chrome options for CI
-        run: |
-          echo "CHROME_OPTS=--headless --no-sandbox --disable-dev-shm-usage" >> $GITHUB_ENV
-          CI_RUN: true
 
-      - name: Run Tests
+      - name: Maven test
         run: mvn test
+        env:
+          CHROME_OPTIONS: --remote-allow-origins=*;--disable-gpu;--no-sandbox;--disable-dev-shm-usage;--headless=new;--window-size=1920,1080
+          CI_RUN: true
+#      - name: Set Chrome options for CI
+#        run: |
+#          echo "CHROME_OPTS=--headless --no-sandbox --disable-dev-shm-usage" >> $GITHUB_ENV
+#          CHROME_OPTIONS: --remote-allow-origins=*;--disable-gpu;--no-sandbox;--disable-dev-shm-usage;--headless=new;--window-size=1920,1080
+#            CI_RUN: true
+
+
+#      - name: Run Tests
+#        run: mvn test
