--- a/pom.xml
+++ b/pom.xml
@@ -39,4 +39,14 @@
 
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version> <!-- Latest version as of now -->
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
